k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ideastoweb-frontend
  namespace: iwfe
  labels:
    app: ideastoweb-frontend

spec:
  replicas: 1
  revisionHistoryLimit: 2

  selector:
    matchLabels:
      app: ideastoweb-frontend

  template:
    metadata:
      labels:
        app: ideastoweb-frontend

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001

      containers:
        - name: ideastoweb-frontend
          image: dip75016860/ideastoweb-frontend:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "192Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
