k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ideastoweb-frontend
  namespace: iwfe
spec:
  type: ClusterIP
  selector:
    app: ideastoweb-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
